--- a/src/app/pages/interview-list/interview-list.component.html
+++ b/src/app/pages/interview-list/interview-list.component.html
@@ -32,9 +32,9 @@
         <div>
           <div class="candidate-actions">
             <div class="info-col">
-              <img src="../../../assets/images/like.png" class="icon" />
-              <p class="label">Hire</p>
-              <p class="info">1 Jul 2018</p>
+              <img src="../../../assets/images/thumbs-down.png" class="icon" />
+              <p class="label">Reject</p>
+              <!-- <p class="info">1 Jul 2018</p> -->
             </div>
             <div class="info-col">
               <p class="label">Awaiting Feedback</p>
@@ -42,7 +42,7 @@
             <div class="info-col">
               <img src="../../../assets/images/unselected.png" class="icon" />
               <p class="label">Undecided</p>
-              <p class="info">1 Jul 2018</p>
+              <!-- <p class="info">1 Jul 2018</p> -->
             </div>
             <div class="info-col">
               <img src="../../../assets/images/calendar.png" class="icon" />
