--- a/src/app/components/candidate-row-detail/candidate-row-detail.component.scss
+++ b/src/app/components/candidate-row-detail/candidate-row-detail.component.scss
@@ -7,8 +7,11 @@
     padding: 13px 14px;
 
     .card-content {
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 2.5fr 1fr;
         gap: 45px;
+        justify-content: space-between;
+    align-items: center;
     }
 
     .candidate-actions{ 
