--- a/src/app/pages/interview-list/interview-list.component.scss
+++ b/src/app/pages/interview-list/interview-list.component.scss
@@ -38,7 +38,9 @@
             border: 1px solid $color-light-grey;
             padding: 13px 0px;
             align-items: center;
-            display: flex;
+            // display: flex;
+            display: grid;
+            grid-template-columns: 1fr 2.5fr 1fr 1.5fr;
             gap: 0;
 
             .basic-data {
@@ -47,7 +49,9 @@
 
 
             .candidate-actions{ 
-                display: flex;
+                // display: flex;
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
                 align-items: center;
             }
         
@@ -61,6 +65,7 @@
                 width: 114px;
                 display: block;
                 min-height: 58px;
+                align-content: center;
         
                 .label{
                     font-family: $font-regular;
